RESOLVED FIXED47204
Fix isSelfCollapsingBlock to be block-flow-aware.
https://bugs.webkit.org/show_bug.cgi?id=47204
Summary Fix isSelfCollapsingBlock to be block-flow-aware.
Dave Hyatt
Reported 2010-10-05 13:14:04 PDT
Fix isSelfCollapsingBlock to be block-flow-aware. It's still using height instead of logical-height.
Attachments
Patch (20.45 KB, patch)
2010-10-05 13:17 PDT, Dave Hyatt
sam: review+
Dave Hyatt
Comment 1 2010-10-05 13:17:35 PDT
Dave Hyatt
Comment 2 2010-10-05 13:32:19 PDT
Fixed in r69141.
Note You need to log in before you can comment on or make changes to this bug.