https://bugs.webkit.org/show_bug.cgi?id=47204

Reviewed by Sam Weinig.

Make isSelfCollapsingBlock use logical height instead of height in all its checks.

Added fast/blockflow/self-collapsing-block.html

WebCore:

* rendering/RenderBlock.cpp:
(WebCore::RenderBlock::isSelfCollapsingBlock):

LayoutTests:

* fast/blockflow/self-collapsing-block.html: Added.
* platform/mac/fast/blockflow/self-collapsing-block-expected.checksum: Added.
* platform/mac/fast/blockflow/self-collapsing-block-expected.png: Added.
* platform/mac/fast/blockflow/self-collapsing-block-expected.txt: Added.



Canonical link: https://commits.webkit.org/59748@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@69141 268f45cc-cd09-0410-ab3c-d52691b4dbfc